--- a/PiBackend/src/main/resources/application.properties
+++ b/PiBackend/src/main/resources/application.properties
@@ -8,4 +8,8 @@ spring.jpa.show-sql=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 logging.level.root=info
+bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
+bezkoder.app.jwtExpirationMs=8640000
+spring.servlet.multipart.max-file-size=5MB
+
 
