--- a/PiBackend/pom.xml
+++ b/PiBackend/pom.xml
@@ -67,6 +67,15 @@
             <artifactId>spring-security-config</artifactId>
             <version>6.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>6.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
