--- a/PiFrontEnd/angular.json
+++ b/PiFrontEnd/angular.json
@@ -31,8 +31,8 @@
 
             ],
             "scripts": [
-            
-              
+
+
             ]
           },
           "configurations": {
@@ -94,9 +94,21 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "/assets/css/bootstrap.min.css",
+              "/assets/css/LineIcons.2.0.css" ,
+              "/assets/css/animate.css",
+              "/assets/css/tiny-slider.css",
+              "/assets/css/glightbox.min.css",
+              "/assets/css/main.css"
             ],
-            "scripts": []
+            "scripts": [
+              "/assets/js/bootstrap.min.js",
+              "/assets/js/wow.min.js",
+              "/assets/js/tiny-slider.js",
+              "/assets/js/glightbox.min.js"
+
+            ]
           }
         }
       }
