--- a/PiFrontEnd/package.json
+++ b/PiFrontEnd/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "jwt-decode": "^4.0.0",
     "ngx-pagination": "^6.0.3",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.10.5",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -31,6 +34,7 @@
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
