--- a/PiFrontEnd/angular.json
+++ b/PiFrontEnd/angular.json
@@ -31,7 +31,8 @@
 
             ],
             "scripts": [
-
+              "./node_modules/chart.js/dist/chart.js"
+            
 
             ]
           },
