--- a/PiFrontEnd/package.json
+++ b/PiFrontEnd/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@swimlane/ngx-charts": "^20.5.0",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^4.1.1",
     "ngx-pagination": "^6.0.3",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
@@ -33,6 +38,8 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~4.3.0",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.5.0",
