--- a/PiBackend/src/main/resources/application.properties
+++ b/PiBackend/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
 bezkoder.app.jwtExpirationMs=8640000
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mchalbi606@gmail.com
+spring.mail.password=bxspxechxucbsutc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
