--- a/PiBackend/pom.xml
+++ b/PiBackend/pom.xml
@@ -69,7 +69,11 @@
             <scope>runtime</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
-
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.32.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
