--- a/PiFrontEnd/package.json
+++ b/PiFrontEnd/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@acpaas-ui/ngx-icon": "^6.0.10",
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@jineeshr007/chatbot": "^1.1.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -41,6 +43,7 @@
     "@types/d3-scale": "^4.0.8",
     "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
