--- a/PiFrontEnd/package.json
+++ b/PiFrontEnd/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@jineeshr007/chatbot": "^1.1.0",
+    "@stomp/stompjs": "^7.0.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -35,6 +36,7 @@
     "ngx-pagination": "^6.0.3",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -51,6 +53,7 @@
     "@types/leaflet": "^1.9.11",
     "@types/leaflet-routing-machine": "^3.2.8",
     "@types/qrcode": "^1.5.5",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
