--- a/PiBackend/src/main/resources/application.properties
+++ b/PiBackend/src/main/resources/application.properties
@@ -12,4 +12,17 @@ bezkoder.app.jwtSecret= ======================BezKoder=Spring===================
 bezkoder.app.jwtExpirationMs=8640000
 spring.servlet.multipart.max-file-size=5MB
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=abrarbouslahi100@gmail.com
+spring.mail.password=miaqxxghoihwukqe
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.from=abrarbouslahi100@gmail.com
+spring.mail.default-encoding=UTF-8
+spring.mail.test-connection=false
 
+
+app.root.frontend=http://localhost:4200
