--- a/PiBackend/src/main/resources/application.properties
+++ b/PiBackend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/DevshareCoCo?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -5,7 +6,13 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui-custom.html
 logging.level.root=info
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ahmedm2kki67@gmail.com
+spring.mail.password=nelasssjedumwvwx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
