--- a/PiFrontEnd/package.json
+++ b/PiFrontEnd/package.json
@@ -10,27 +10,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/fire": "^16.0.0",
+    "@angular/forms": "^16.2.12",
+    "@angular/google-maps": "^16.2.14",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@geoapify/angular-geocoder-autocomplete": "^2.0.1",
+    "@geoapify/geocoder-autocomplete": "^2.0.1",
+    "@popperjs/core": "^2.11.8",
+    "leaflet": "^1.9.4",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular/cli": "~15.2.10",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular/cli": "~16.2.12",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.11",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
