--- a/PiBackend/src/main/resources/application.properties
+++ b/PiBackend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+server.port=8081
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 logging.level.root=info
