--- a/PiFrontEnd/angular.json
+++ b/PiFrontEnd/angular.json
@@ -37,14 +37,10 @@
             
 
             ],
-<<<<<<< HEAD
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-
-=======
             "scripts": [
-              "./node_modules/chart.js/dist/chart.js"
+              "./node_modules/chart.js/dist/chart.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             
->>>>>>> developer
 
             ]
           },
